# BAG

./: CMakeLists.txt
api/: CMakeLists.txt  bag.cpp  bag.h  bag_c_types.h  bag_compoundlayer.cpp  bag_compoundlayer.h  bag_config.h  bag_dataset.cpp  bag_dataset.h  bag_fordec.h  bag_interleavedlayer.cpp  bag_interleavedlayer.h  bag_layer.cpp  bag_layer.h  bag_legacy_crs.cpp  bag_legacy_crs.h  bag_metadata.cpp  bag_metadata.h  bag_metadata_import.cpp  bag_metadata_import.h  bag_metadatatypes.cpp  bag_metadatatypes.h  bag_metadatav2.cpp  bag_metadatav2.h  bag_private.h  bag_stdint.h  bag_trackinglist.cpp  bag_trackinglist.h  bag_types.h  bag_version.h  bagdataset.cpp  bagdataset.h  bagfordec.h  baginterleavedlayer.cpp  baginterleavedlayer.h  baglayer.cpp  baglayer.h  bagmetadata.cpp  bagmetadata.h  bagmetadata2.cpp  (+5 more)
api/legacy/: bag.h  bag_metadata.cpp  bag_metadata_export.cpp  bag_metadata_import.cpp
cmake/: FindHDF5.cmake
examples/: CMakeLists.txt  bag_create.cpp  bag_gencert.cpp  bag_read.cpp  bag_signcert.cpp  bag_signfile.cpp  bag_verifycert.cpp  bag_verifyfile.cpp
